--- a/index.html
+++ b/index.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="container">
-            <nav class="cat">
-                <div class="pig">
-                    <div class="rat">
-                        <img src="./logooo.png" width="50px" alt="logo">
-                        <a href="#"><h1>Untitled UL</h1></a>
-                    </div>
-                    <div class="dog">
-                        <ul><li><a href="#">Home</a></li>
-                        <li><a href="#">Products <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1.5L6 6.5L11 1.5" stroke="#475467" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg></a></li>
-                        <li><a href="#">Resources <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1.5L6 6.5L11 1.5" stroke="#475467" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg></a></li>
-                        <li><a href="#">Pricing</a></li>
-                        </ul>
-                    </div>
-                    <!-- <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 1.5L6 6.5L11 1.5" stroke="#475467" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg> -->
-                </div>
-                <div class="buttons">
-                    <a id="login-button-link" href="#"><button id="login-button"></button>Login</a>
-                    <a id="signup-button-link" href="#"><button id="signup-button"></button>Sign up</a>
-                </div>    
-            </nav>
-            <hr>
-            <div class="goat"></div>
-            <!-- <p>We're hiring!</p>
-            <p>Join our remote team</p>
-            <h1>People who care<br>about your growth</h1>
-            <p>Powerful, self-serve product and growth analytics<br>to help you convert, engage and retain more.</p>
-            <label for="email">Enter your email</label>
-            <input type="email" id="Enter your email" name="Enter your email">
-            <input type="submit">
-            <p>We care about your data in our <u>privacy policy</u></p>
-            <div class="dog">
-        </div>
-        <div class="original">
-            <img src="porscheeee.webp">
-            <p>Login</p>
-            <button type="submit">Sign up</button> -->
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./logooo.png" width="30px" alt="logo">
+                <a href="#">Untitled UI</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products <span>▼</span></a></li>
+                <li><a href="#">Resources <span>▼</span></a></li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+            <div class="nav-buttons">
+                <a href="#" class="login">Log in</a>
+                <a href="#" class="signup">Sign up</a>
+            </div>
+        </nav>
+        <section class="hero">
+            <div class="hero-text">
+                <span class="hiring-badge">We're hiring! <a href="#">Join our remote team →</a></span>
+                <h1>People who care<br>about your growth</h1>
+                <p>Powerful, self-serve product and growth analytics to help you convert, engage, and retain more.</p>
+
+                <form class="email-form">
+                    <input type="email" placeholder="Enter your email">
+                    <button type="submit">Get started</button>
+                </form>
+                <p class="privacy">We care about your data in our <a href="#">privacy policy</a></p>
+            </div>
+
+            <div class="hero-image">
+                <img src="./Image.png" alt="Abstract Glass Image">
+            </div>
+        </section>
+    </div>
+</body>
 </html>
